# tilastoruudukko-gridgame

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
deploy/nginx/: gridgame.example.com.conf
gridgame/: manage.py
gridgame/config/: settings.py  storage.py  urls.py  wsgi.py
gridgame/game/: admin.py  auth_views.py  editor_serializers.py  editor_urls.py  editor_views.py  grid_providers.py  models.py  serializers.py  services.py  urls.py  views.py
gridgame/game/management/commands/: import_areas.py  load_grid_data.py
gridgame/game/migrations/: 0001_initial.py  0002_add_cell_report.py  0002_rename_grid_size_to_grid_type.py  0003_game_player_token.py  0004_area_game_play_area_alter_game_center_and_more.py  0005_board_cell_and_snapshots.py  0006_add_user_to_game.py
gridgame/static/css/: editor.css  style.css
gridgame/static/js/: api.js  app.js  gps.js  grid.js  map.js
gridgame/static/js/editor/: editor-api.js  editor-app.js  editor-map.js
gridgame/templates/: editor.html  index.html  login.html
